@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2006-10-05"
+.TH VOIKKOSPELL 1 "2006-12-31"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -56,6 +56,9 @@ to 5 to get better performance.
 (voikkospell)
 .TP
 .BI accept_first_uppercase= n
+(voikkospell)
+.TP
+.BI ocr_suggestions= n
 (voikkospell)
 .TP
 .BI no_ugly_hyphenation= n
